--- a/contato.css
+++ b/contato.css
@@ -313,3 +313,45 @@ a[target="_blank"] {
   background-color: #ca8224; /* Cor de fundo muda quando passa o mouse, igual ao botão */
   cursor: pointer; /* Muda o cursor para indicar que é interativo */
 }
+
+
+.calculator {
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 300px;
+}
+
+.calculator h2 {
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.calculator label {
+  font-size: 14px;
+  color: #555;
+}
+
+.calculator input {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.results {
+  margin-top: 20px;
+}
+
+.results p {
+  margin: 5px 0;
+  font-size: 16px;
+  color: #333;
+}
+
+.results p span {
+  font-weight: bold;
+}
